--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "npm": "^8.1.1"
   },
   "dependencies": {
+    "@supercharge/strings": "^1.22.0",
     "config": "^3.3.6",
     "eosjs": "^22.1.0",
     "hjson": "^3.2.2",
+    "is-plain-object": "^5.0.0",
     "jsonschema": "^1.4.0",
     "node-fetch": "^2.6.2"
   }
