Installed axios npm package. Developed ContentType const class. Developed code in ConfigValidator to enable subclasses to add job specific validations. Developed code in ConfigValidator to wrap thrown errors in the correct Wrap Error class, etiher WrappedValidationError or WrappedError. Added jobSpecificValidate method to the ConfigValidator class. Developed RESTAuthMethod const class. Developed RequestMethod const class. Developed CacheFactory base class. Developed GeneratedBearerTokenRESTAuthHandler class. Developed RESTAuthHandler base class. Developed RESTAuthHandlerFactory class. Updated ConfigValidatorFactory class to extend CacheFactory base class. Update RESTLoaderJobConfigValidator to include the validation of the data propertyand auth url. Added additional validations to the RESTLoaderJobConfigValidator, that couldn't be validated through the json schema only. Developed LoaderJob base class. Developed RESTLoaderJob class. Updated parserFactory to extend the CacheFactory base class. Developed ExternalError class. Developed InternalError class. Added fetch_timestamp parameter to the LogApi class. Added assertion functions to the TestAssertions file. Added addBearerTokenHeader function to the TestDataFunctions class. Developed GeneratedBearerTokenRESTAuthHandler test class. Developed further tests in Config test class. Developed further tests in ConfigValidator class. Developed further tests in RESTLoaderJobConfigValidator test class. Developed LoaderJob test class. Developed RESTLoaderJob test class. Developed further LogApi tests.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@supercharge/strings": "^1.22.0",
+    "axios": "^0.24.0",
     "config": "^3.3.6",
     "eosjs": "^22.1.0",
     "hjson": "^3.2.2",
