--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hppl-ingestion-app",
   "version": "0.0.1",
   "description": "HPPL Ingestion App",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest --watch --runInBand"
   },
@@ -26,6 +26,7 @@
     "@supercharge/strings": "^1.22.0",
     "axios": "^0.24.0",
     "config": "^3.3.6",
+    "cron": "^1.8.2",
     "eosjs": "^22.1.0",
     "hjson": "^3.2.2",
     "is-plain-object": "^5.0.0",
