Renamed JobsConfigApi and all related items to jobConfigApi. Installed file-queue npm package. Installed await-sleep npm package. Moved Config functionality related to the getting and decorating the job configurations to the JobConfig class, and moved Object creation of the Config class to the index file, to make it more testable and allow dependency injection, and deleted the Config class. Updated LoaderJob to await for the logging call to allow for a better error debugging experience. Developed JobConfig class. Updated Scheduler class, to receive in the constructor its dependencies instead of creating them inside the class to allow for dependency injection. Developed code in the schedule method of the scheduler class to throw an error if there are no jobs to schedule. Developed code in the schedule method of the scheduler class to catch any errors provide more context to the error and rethrow it. Developed index initial run script. Updated BufferedLogApi to receive a queue object to handle the buffering of the payloads, instead of storing objects in an array, and updated the code accorrdingly. Developed start method in the BufferedLogApi class. Developed stop method in the BufferedLogApi class. Developed FileQueue class. Developed FSUtil class that provides file system functionality. Updated TestSetupHelper class to provide functionality to create and delete temp dirs. Developed Scheduler test class to validate Scheduler class functionality. Developed FileQueue test class to validate FileQueue functionality. Updated JobConfig api test class to verify further functionality. Updated LogApi test class to verify further functionality.

--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "dependencies": {
     "@supercharge/strings": "^1.22.0",
+    "await-sleep": "^0.0.1",
     "axios": "^0.24.0",
     "config": "^3.3.6",
     "cron": "^1.8.2",
     "eosjs": "^22.1.0",
+    "file-queue": "^0.3.0",
     "hjson": "^3.2.2",
     "is-plain-object": "^5.0.0",
     "jsonschema": "^1.4.0",
