--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "hjson": "^3.2.2",
     "is-plain-object": "^5.0.0",
     "jsonschema": "^1.4.0",
-    "node-fetch": "^2.6.2"
+    "lodash.get": "^4.4.2",
+    "node-fetch": "^2.6.2",
+    "yargs": "^17.2.1"
   }
 }
