Improved the structure of the application configuration file. Added contract.keysValutKey configuration parameter. Added vault related configuration parameters to the configuration file. Installed node-vault npm package. Added cert-ext-file configuration file used to setup the IPs related to the hashicorp certificate. Developed the documentation to create ssl certificates, setup and configure the hashicorp vault. Created the hashicorp configuration file. Developed the hashicorp vault policy file to be used for the ingestion app. Developed a Vault base class. Developed a DummyVault class for testing. Developed HashiCorpVault class that facilitates the interaction with the hashicorp vault. Developed the index start script that enables the user of the cli if he wants to use the dummy or the real vault. Added logging to the scheduler to log the job configuration that is being scheduled. Developed HashiCorpVault test class to verify the functionality.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonschema": "^1.4.0",
     "lodash.get": "^4.4.2",
     "node-fetch": "^2.6.2",
+    "node-vault": "^0.9.22",
     "yargs": "^17.2.1"
   }
 }
