--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-promise": "^5.1.1",
     "install": "^0.13.0",
     "jest": "^27.3.1",
+    "jest-html-reporter": "^3.4.1",
     "npm": "^8.1.1"
   },
   "dependencies": {
