Updated hppl vault docker image. Updated docker-compose config file with the new hppl vault docker image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
     
 services:
   vault:
-    image: sebastianmontero/vault-prod-test:latest
+    image: hppl-vault:latest
     volumes:
       - "${VAULT_CONFIG_DIR}:/vault/config"
     ports:
