Updated job configs to use the correct unixEpochOffset specifier for start and end times of alert status job. Updated LoaderJob tests to account for the new LoaderJob constructor. Fixed issue in FileQueue test.

--- a/config/job-configs.json
+++ b/config/job-configs.json
@@ -88,8 +88,8 @@
       "method": "get",
       "url": "https://HGHQAPCC01.hancockprospecting.local/irisservices/api/v1/public/stats/alerts",
       "params":{
-        "startTimeUsecs":"'#{unixEpochOffset,-60}#'",
-        "endTimeUsecs":"'#{unixEpochOffset,0}#'"
+        "startTimeUsecs":"#{unixEpochOffset,-60}#",
+        "endTimeUsecs":"#{unixEpochOffset,0}#"
       },
       "auth": {
         "method": "GeneratedBearerToken",
